--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,1 +1,3 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+@import './scss/common-styles.scss';
