--- a/front/src/app/login/login/login.component.html
+++ b/front/src/app/login/login/login.component.html
@@ -15,7 +15,9 @@
           <mat-form-field fxFlex="100">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email">
-            <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">Invalid email</span>
+            <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">
+              Invalid email
+            </span>
           </mat-form-field>
         </div>
 
@@ -23,14 +25,18 @@
           <mat-form-field fxFlex="100">
             <mat-label>Password</mat-label>
             <input matInput type="password" formControlName="password">
-            <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">Password is required</span>
+            <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
+              Password is required
+            </span>
           </mat-form-field>
         </div>
 
         <div fxLayout="row">
           <span fxFlex></span>
-          <button mat-raised-button color="primary" disabled="!loginForm.valid">Login</button>
+          <button mat-raised-button color="primary" [disabled]="!loginForm.valid">Login</button>
         </div>
+
+        <span *ngIf="!loginForm.valid && loginForm.touched">Invalid credentials</span>
 
       </form>
     </mat-card-content>
