--- a/front/src/scss/common-styles.scss
+++ b/front/src/scss/common-styles.scss
@@ -4,4 +4,11 @@ html, body {
     background-color: $background-grey;
     min-height: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+    
+}
+
+.wrapper-padding {
+    padding: 20px;
 }
