--- a/front/src/app/user/user/user.component.html
+++ b/front/src/app/user/user/user.component.html
@@ -1,9 +1,33 @@
 <div class="wrapper-padding">
   <mat-card>
     <mat-list>
-      <mat-list-item>ID: {{ user.id }}</mat-list-item>
-      <mat-list-item>Email: {{ user.email }}</mat-list-item>
-      <mat-list-item>Created at: {{ user.createdAt }}</mat-list-item>
+      <mat-list-item>
+        <p><b>ID:</b> {{ user.id }}</p>
+      </mat-list-item>
+
+      <mat-list-item>
+        <p><b>Email:</b> {{ user.email }}</p>
+      </mat-list-item>
+
+      <mat-list-item>
+        <p><b>Created at:</b> {{ user.createdAt | date:'d.M. yyyy H:m:s' }}</p>
+      </mat-list-item>
+
+      <mat-list-item>
+        <p><b>Updated at:</b> {{ user.updatedAt | date:'d.M. yyyy H:m:s' }}</p>
+      </mat-list-item>
+
+      <mat-list-item>
+        <p>
+          <b>API key:</b> {{ user.apiKey }}
+          <button
+            (click)="generateApiKey()"
+            mat-raised-button
+            color="primary"
+            [disabled]="isLoading">Generate new API key</button>
+        </p>
+      </mat-list-item>
     </mat-list>
+    <p>Token is used to send a weather log from an Arduino weather station to the API server</p>
   </mat-card>
 </div>
