--- a/front/src/app/dashboard/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,15 @@
 <div class="wrapper-padding">
-  <mat-card>
-    
+
+  <mat-card class="chart-card" *ngFor="let element of data">
+
+    <div class="saa-chart" fxFlex>
+
+      <saa-line-chart
+        [name]="element.name"
+        [series]="element.series">
+      </saa-line-chart>
+
+    </div>
   </mat-card>
+
 </div>
