fix: update user view text for API key

--- a/front/src/app/user/user/user.component.html
+++ b/front/src/app/user/user/user.component.html
@@ -28,6 +28,6 @@
         </p>
       </mat-list-item>
     </mat-list>
-    <p>Token is used to send a weather log from an Arduino weather station to the API server</p>
+    <p>API key is used to send weather log data from an Arduino weather station to the API server</p>
   </mat-card>
 </div>
