chore(line-chart): new color scheme, add custom date and value tick formatting

--- a/front/src/app/dashboard/line-chart/line-chart.component.html
+++ b/front/src/app/dashboard/line-chart/line-chart.component.html
@@ -16,7 +16,8 @@
     [timeline]="timeline"
     [yScaleMin]="yScaleMin"
     [yScaleMax]="yScaleMax"
-    
+    [xAxisTickFormatting]="dateTickFormatting"
+    [yAxisTickFormatting]="valueTickFormatting"
     (select)="onSelect($event)">
   </ngx-charts-line-chart>
 </div>
