--- a/front/src/app/login/login/login.component.html
+++ b/front/src/app/login/login/login.component.html
@@ -1,48 +1,55 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="login-wrapper">
+<div fxFlex="grow" fxLayout="column" class="login-wrapper">
 
-  <div [fxFlex.md]="25"></div>
+	<div [fxFlex.md]="25"></div>
 
-  <mat-card [fxFlex.md]="50" [fxFlex.xs]="100">
+	<div fxLayou="row" fxFlex="grow">
 
-    <mat-card-header>
-      <mat-card-title>Login to Sää Vai</mat-card-title>
-    </mat-card-header>
+		<div [fxFlex.md]="25"></div>
 
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+		<mat-card [fxFlex.md]="50" [fxFlex.xs]="100" class="card-login">
 
-        <div fxLayout="row">
-          <mat-form-field fxFlex="100">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email">
-            <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">
-              Invalid email
-            </span>
-          </mat-form-field>
-        </div>
+			<mat-card-header>
+			<mat-card-title>Login to Sää Vai</mat-card-title>
+			</mat-card-header>
 
-        <div fxLayout="row">
-          <mat-form-field fxFlex="100">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password">
-            <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
-              Password is required
-            </span>
-          </mat-form-field>
-        </div>
+			<mat-card-content>
+			<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
-        <div fxLayout="row">
-          <span fxFlex></span>
-          <button mat-raised-button color="primary" [disabled]="!loginForm.valid">Login</button>
-        </div>
+				<div fxLayout="row">
+				<mat-form-field fxFlex="100">
+					<mat-label>Email</mat-label>
+					<input matInput formControlName="email">
+					<span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched">
+					Invalid email
+					</span>
+				</mat-form-field>
+				</div>
 
-        <span *ngIf="!loginForm.valid && loginForm.touched">Invalid credentials</span>
+				<div fxLayout="row">
+				<mat-form-field fxFlex="100">
+					<mat-label>Password</mat-label>
+					<input matInput type="password" formControlName="password">
+					<span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
+					Password is required
+					</span>
+				</mat-form-field>
+				</div>
 
-      </form>
-    </mat-card-content>
+				<div fxLayout="row">
+				<span fxFlex></span>
+				<button mat-raised-button color="primary" [disabled]="!loginForm.valid">Login</button>
+				</div>
 
-  </mat-card>
+				<span *ngIf="!loginForm.valid && loginForm.touched">Invalid credentials</span>
 
-  <div [fxFlex.md]="25"></div>
+			</form>
+			</mat-card-content>
+
+		</mat-card>
+
+		<div [fxFlex.md]="25"></div>
+	</div>
+
+	<div [fxFlex.md]="25"></div>
 
 </div>
