--- a/front/src/scss/common-styles.scss
+++ b/front/src/scss/common-styles.scss
@@ -1,14 +1,17 @@
 @import './variables';
 
 html, body {
-    background-color: $background-grey;
-    min-height: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    
+	background-color: $background-grey;
+	min-height: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 .wrapper-padding {
-    padding: 20px;
+	padding: 20px;
+}
+
+.padding-left {
+	padding-left: 20px;
 }
