feat: add date/time formatting by range, custom tooltip template

--- a/front/src/app/dashboard/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard/dashboard.component.html
@@ -67,6 +67,7 @@
 			<div class="saa-chart" fxFlex>
 
 				<saa-line-chart
+					[range]="activeRange"
 					[name]="element.name"
 					[series]="element.series"
 					[yScaleMin]="element.extremes.min"
